Worked on assignment

--- a/public/postalRateCalculator.html
+++ b/public/postalRateCalculator.html
@@ -10,21 +10,27 @@
 
     <script src="scripts/functions.js"></script>
 </head>
-
-<nav class="navbar navbar-default navbar-static-top navbar-inverse">
-  <div class="container">
-    <ul class="nav navbar-nav">
-      <li class="active">
-        <a href="/" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-home"></span> Home</a>
-      </li>
-      <li>
-        <a href="/postal" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-user"></span>Postal Calculator</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
+  
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Node.js Assignments</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/math">Math Calculator</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/postal">Postal Calculator</a>
+        </li>
+      </ul>
+    </div>
+</nav>
 
   <h1>Postal Rate Calculator</h1>
 
