--- a/public/postalRateCalculator.html
+++ b/public/postalRateCalculator.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-
+    <title>Postal Calculator</title>
     <meta name="description" content="Home">
     <meta name="author" content="Scott Mosher">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
     <script src="scripts/functions.js"></script>
 </head>
   
@@ -32,26 +32,42 @@
     </div>
 </nav>
 
+<div class="container">
   <h1>Postal Rate Calculator</h1>
 
-  <div>
-    <form method="get", action='../estimate'>
-      <div class="form-group">
-        <label for="weight">Weight</label>
-        <input type="text" class="form-control" id="weight" name="weight" aria-describedby="weighthelp" placeholder="Weight">
-        <small id="numOneHelp" class="form-text text-muted">Please enter a weight</small>
-      </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <p>This is a mockup of a form a user could use to enter the weight of a package and get the cost of shipping it.</p>
+      <p>On form submission, you are sent to a new page.  In the meantime, the system is calcuating the cost of shipping your package.</p>
+    </div>
 
-      <div class="form-group">
-        <label for="shipMethod">Shipping Methods</label>
-        <select name="shipMethod" id="shipMethod">
-          <option value = "flat">First Class Flat Envelope</option>
-          <option value = "package">First Class Package</option>
-        </select>
+    <div class="col-sm-6">
+      <div class='col-sm-10'>
+        <form method="get", action='../estimate'>
+          <div class="form-group">
+            <label for="weight">Weight</label>
+            <input type="text" class="form-control col-sm-4" id="weight" name="weight" aria-describedby="weighthelp" placeholder="Weight (oz)">
+            <small id="numOneHelp" class="form-text text-muted">Weight must be less than 13</small>
+          </div>
+    
+          <div class="form-group">
+            <label for="shipMethod">Shipping Methods</label>
+            <select name="shipMethod" id="shipMethod">
+              <option value = "first-class-flat-rate-envelope">First Class Flat Envelope</option>
+              <option value = "first-class-package">First Class Package</option>
+            </select>
+          </div>
+
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    </div>
   </div>
+</div>
+  
+  <footer class='text-center'>
+    <p>Copyright 2020 Scott Mosher</p>
+  </footer>
 
 </body>
 </html>
