--- a/public/mathForm.html
+++ b/public/mathForm.html
@@ -28,6 +28,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/postal">Postal Calculator</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/clients">Personal Trainer App</a>
+        </li>
       </ul>
     </div>
   </nav>
